--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 
 <meta name="data-ein" content="922759377">
 <meta name="data-name" content="GIVENS CHARITIES INC.">
-<meta name="data-email" content="contact@givenscharities.netivo.io.vn">
+<meta name="data-email" content="contact@givenscharities.netexa.io.vn">
 <meta name="data-phone" content="+17132619588">
 <meta name="data-address" content="744 POINT SUR,
 OCEANSIDE, CA 92058">
@@ -104,7 +104,7 @@ OCEANSIDE, CA 92058. This is the primary mailing address for official
     <article class="ccc4221f325">
       <h3>How to reach us</h3>
       <p>
-        Email: <a href="mailto:contact@givenscharities.netivo.io.vn">contact@givenscharities.netivo.io.vn</a><br>
+        Email: <a href="contact@givenscharities.netexa.io.vn">contact@givenscharities.netexa.io.vn</a><br>
         Phone: <a href="tel:+17132619588">+17132619588</a>
       </p>
       <p>
@@ -125,7 +125,7 @@ OCEANSIDE, CA 92058. This is the primary mailing address for official
     <div>
       <div class="small"><strong>Address:</strong> 744 POINT SUR,
 OCEANSIDE, CA 92058</div>
-      <div class="small"><strong>Email:</strong> contact@givenscharities.netivo.io.vn</div>
+      <div class="small"><strong>Email:</strong> contact@givenscharities.netexa.io.vn</div>
       <div class="small"><strong>Phone:</strong> +17132619588</div>
     </div>
     <div>
