Force replace email (safe)

--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 
 <meta name="data-ein" content="922759377">
 <meta name="data-name" content="GIVENS CHARITIES INC.">
-<meta name="data-email" content="contact@givenscharities.netivo.io.vn">
+<meta name="data-email" content="contact@givenscharities.netexa.io.vn">
 <meta name="data-phone" content="+17132619588">
 <meta name="data-address" content="744 POINT SUR,
 OCEANSIDE, CA 92058">
@@ -53,7 +53,7 @@ OCEANSIDE, CA 92058">
          <strong>EIN:</strong> 922759377</p>
       <p><strong>Principal office:</strong> 744 POINT SUR,
 OCEANSIDE, CA 92058</p>
-      <p><strong>Email:</strong> <a href="mailto:contact@givenscharities.netivo.io.vn">contact@givenscharities.netivo.io.vn</a><br>
+      <p><strong>Email:</strong> <a href="contact@givenscharities.netexa.io.vn">contact@givenscharities.netexa.io.vn</a><br>
          <strong>Phone:</strong> <a href="tel:+17132619588">+17132619588</a></p>
       <p>
         When requesting verification, please include the organization name and EIN in your
@@ -103,7 +103,7 @@ OCEANSIDE, CA 92058</p>
     <div>
       <div class="small"><strong>Address:</strong> 744 POINT SUR,
 OCEANSIDE, CA 92058</div>
-      <div class="small"><strong>Email:</strong> contact@givenscharities.netivo.io.vn</div>
+      <div class="small"><strong>Email:</strong> contact@givenscharities.netexa.io.vn</div>
       <div class="small"><strong>Phone:</strong> +17132619588</div>
     </div>
     <div>
