Force replace email (safe)

--- a/governance.html
+++ b/governance.html
@@ -9,7 +9,7 @@
 
 <meta name="data-ein" content="922759377">
 <meta name="data-name" content="GIVENS CHARITIES INC.">
-<meta name="data-email" content="contact@givenscharities.netivo.io.vn">
+<meta name="data-email" content="contact@givenscharities.netexa.io.vn">
 <meta name="data-phone" content="+17132619588">
 <meta name="data-address" content="744 POINT SUR,
 OCEANSIDE, CA 92058">
@@ -93,7 +93,7 @@ OCEANSIDE, CA 92058">
       <p><strong>EIN:</strong> 922759377</p>
       <p><strong>Principal office:</strong> 744 POINT SUR,
 OCEANSIDE, CA 92058</p>
-      <p><strong>Primary contact:</strong> contact@givenscharities.netivo.io.vn • +17132619588</p>
+      <p><strong>Primary contact:</strong> contact@givenscharities.netexa.io.vn • +17132619588</p>
       <p>
         Verification requests from agencies, donors, and partners may reference the organization
         name and EIN. We respond with documentation that describes our status, programs, and
@@ -114,7 +114,7 @@ OCEANSIDE, CA 92058</p>
     <div>
       <div class="small"><strong>Address:</strong> 744 POINT SUR,
 OCEANSIDE, CA 92058</div>
-      <div class="small"><strong>Email:</strong> contact@givenscharities.netivo.io.vn</div>
+      <div class="small"><strong>Email:</strong> contact@givenscharities.netexa.io.vn</div>
       <div class="small"><strong>Phone:</strong> +17132619588</div>
     </div>
     <div>
