Force replace email (safe)

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <meta name="data-ein" content="922759377">
 <meta name="data-name" content="GIVENS CHARITIES INC.">
-<meta name="data-email" content="contact@givenscharities.netivo.io.vn">
+<meta name="data-email" content="contact@givenscharities.netexa.io.vn">
 <meta name="data-phone" content="+17132619588">
 <meta name="data-address" content="744 POINT SUR,
 OCEANSIDE, CA 92058">
@@ -105,7 +105,7 @@ OCEANSIDE, CA 92058">
       <div class="small">501(c)(3) • EIN: 922759377</div>
     </div>
     <div><div class="small"><strong>Address:</strong> 744 POINT SUR,
-OCEANSIDE, CA 92058</div><div class="small"><strong>Email:</strong> contact@givenscharities.netivo.io.vn</div><div class="small"><strong>Phone:</strong> +17132619588</div></div>
+OCEANSIDE, CA 92058</div><div class="small"><strong>Email:</strong> contact@givenscharities.netexa.io.vn</div><div class="small"><strong>Phone:</strong> +17132619588</div></div>
     <div><div class="small"><strong>Mission:</strong> Strengthening communities through equitable access, support, and opportunity.</div></div>
   </div>
 </footer>
