Add facebook-domain-verification meta

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 OCEANSIDE, CA 92058">
 <meta name="data-map" content="744+POINT+SUR,+OCEANSIDE,+CA+92058">
   <meta name="description" content="We are a 501(c)(3) organization advancing community services, education, and direct relief through transparent programs, local partnerships, and measurable outcomes.">
+<meta name="facebook-domain-verification" content="fg4a0wx9h54gq7wgtabmoj6k3ya3gn" />
 </head>
 <body>
 <div style="position:absolute;left:-9999px;top:-9999px;opacity:0" data-uniq="{{UNIQUE_BLOB}}">
